@@ -93,6 +93,12 @@ dpkg (1.16.0) UNRELEASED; urgency=low
   * Clarify that an up-to-date dpkg only needs to be unpacked for
     dpkg-maintscript-helper to work.
 
+  [ Steve Langasek ]
+  * Add new variables to dpkg-architecture, DEB_HOST_MULTIARCH and
+    DEB_BUILD_MULTIARCH, that return the "ideal" GNU triplet for each
+    architecture which should be used as the path component for library
+    installation.
+
   [ Updated programs translations ]
   * German (Sven Joachim).
   * Portuguese (Miguel Figueiredo).
